Footer acts as intended without losing scrollbar, fixes #1

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,9 @@
-.h5p-digibook {
-  display: flex;
-  flex-direction: column;
+#h5p-digibook.h5p-scrollable-fullscreen {
+  overflow-y: auto;
 }
 
 
 .h5p-digibook-content {
-  overflow-y: auto;
   display: flex;
   flex: 1;
 }
